dataset/local/df_check_missing_sig_options/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "rpm install vim-enhanced"
        PrependShell: true
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "rpm install --nosignature vim-enhanced"
        PrependShell: true
