dataset/local/df_check_missing_sig_options/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-missing-signature-options
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-missing-signature-options
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: check-missing-signature-options
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
